--- a/job/templates/job/base.html
+++ b/job/templates/job/base.html
@@ -72,6 +72,7 @@
                   <li><a href="{% url 'job:my_job' %}"><i class="fa fa-edit"></i> Services </a></li>
                   <li><a href="{% url 'job:jobs_approvel' %}"><i class="fa fa-edit"></i> Approve jobs </a></li>
                   <li><a href="{% url 'job:all_jobs' %}"><i class="fa fa-edit"></i> Jobs </a></li>
+                  <li><a href="{% url 'job:feedback' %}"><i class="fa fa-edit"></i> Feedback </a></li>
                 {% endif %}
                 {% if 'Admin' in request.session.dash %}
                 <li><a href="{% url 'job:index' %}"><i class="fa fa-home"></i> Dashboard </a></li>
@@ -83,6 +84,7 @@
                 <li><a href="{% url 'job:customer' %}"><i class="fa fa-edit"></i> Customer </a></li>
                 <li><a href="{% url 'job:worker' %}"><i class="fa fa-edit"></i> Worker </a></li>
                 <li><a href="{% url 'job:wishes_worker' %}"><i class="fa fa-edit"></i> Worker Requests</a></li>
+                <li><a href="{% url 'job:feedback' %}"><i class="fa fa-edit"></i> Feedback </a></li>
                 {% endif %}
               </ul>
             </div>
