--- a/job/templates/job/create_job.html
+++ b/job/templates/job/create_job.html
@@ -4,7 +4,6 @@
 <!-- Datetime picker css starts -->
 <link href="{% static 'job/css/bootstrap-datetimepicker.min.css' %}" rel="stylesheet" type="text/css" />
 <!-- Datetime picker css ends -->
-
 	{% if messages %}
 		<ul class="messages">
 			{% for message in messages %}
@@ -17,7 +16,7 @@
 					<div class="form-group">
 						<label class="control-label col-sm-4" for="worker">Worker : </label>
 						<select name="worker_id" id="worker_id" style="width:200px">
-							<option  selected="selected" disabled="">Select Worker:</option>
+							<option  selected="selected" value="" disabled="">Select Worker:</option>
 							{% for value in all_workers %}
 								{% if not value.worker.wish_to_be_worker %}
 								<option value="{{value.id}}">{{value}}</option>
@@ -31,7 +30,7 @@
 					<div class="form-group">
 						<label class="control-label col-sm-4" for="job_start_datetime">Start Time : </label>
 						<div class="input-group date form_datetime col-md-5" data-date-format="yyyy-mm-dd hh:ii:ss" data-link-field="dtp_input1">
-							<input class="form-control" size="16" id="job_start_datetime" type="text" name="job_start_datetime" value="" readonly>
+							<label id="foo-error" class="error hidden" for="job_start_datetime">This field is required.</label><input class="form-control" size="16" id="job_start_datetime" type="text" name="job_start_datetime" value="" readonly>
 							<span class="input-group-addon"><span class="glyphicon glyphicon-th"></span></span>
 						</div>
 					</div>
@@ -45,6 +44,57 @@
 					<div class="result" id="{{message}}">{{message}}</div>
 			</form>
 			<script type="text/javascript">
+
+			$(document).ready(function(){
+				$("#worker_id").blur(function(){
+	          var worker = $(this).val();
+	          if(worker == null) {
+	            $(this).closest('.form-group').addClass('has-error').addClass('has-feedback');
+	          }
+	      });
+				$("#job_start_datetime").blur(function(){
+	          var datetime = $(this).val();
+	          if(datetime == "") {
+						  $(this).closest('.form-group').addClass('has-error').addClass('has-feedback');
+	          }
+	      });
+				$("#job_description").blur(function(){
+	          var description = $(this).val();
+	          if(description == "") {
+							$(this).attr('placeholder','This field is required');
+						  $(this).closest('.form-group').addClass('has-error').addClass('has-feedback');
+	          }
+	      });
+				$('#worker_id').keyup(function(){
+	        var worker = $(this).val();
+	        if(worker == "") {
+						$(this).closest('.form-group').addClass('has-error').addClass('has-feedback');
+	        }
+	        else {
+	          $(this).closest('.form-group').removeClass('has-error').removeClass('has-feedback');
+	        }
+	      });
+				$('#job_start_datetime').keyup(function(){
+	        var datetime = $(this).val();
+	        if(datetime == "") {
+						$(this).closest('.form-group').addClass('has-error').addClass('has-feedback');
+	        }
+	        else {
+	          $(this).closest('.form-group').removeClass('has-error').removeClass('has-feedback');
+	        }
+	      });
+				$('#job_description').keyup(function(){
+	        var description = $(this).val();
+	        if(description == "") {
+						$(this).closest('.form-group').addClass('has-error').addClass('has-feedback');
+	        }
+	        else {
+	          $(this).closest('.form-group').removeClass('has-error').removeClass('has-feedback');
+	        }
+	      });
+	    });
+
+
 					$.ajaxSetup({
 			    	beforeSend: function(xhr, settings) {
 			      	getCookie(settings);
