--- a/job/templates/job/customer_form.html
+++ b/job/templates/job/customer_form.html
@@ -186,5 +186,48 @@
   		</form>
     </div>
    </div>
+
+<script type="text/javascript">
+ $(document).ready(function(){
+   $("#email").blur(function(){
+       var email = $(this).val();
+       if(email == "") {
+         $(this).closest('div').find('label').removeClass('hidden').html('This field is required.');
+         $(this).closest('.form-group').addClass('has-error').addClass('has-feedback');
+       }
+   });
+   $("#password").blur(function(){
+       var password = $(this).val();
+       if(password == "") {
+         $(this).closest('div').find('label').removeClass('hidden').html('This field is required.');
+         $(this).closest('.form-group').addClass('has-error').addClass('has-feedback');
+       }
+   });
+   
+   $('#email').keyup(function(){
+     var email = $(this).val();
+     if(email == "") {
+       $(this).closest('div').find('label').removeClass('hidden').html('This field is required.');
+       $(this).closest('.form-group').addClass('has-error').addClass('has-feedback');
+     }
+     else {
+       $(this).closest('div').find('label').addClass('hidden');
+       $(this).closest('.form-group').removeClass('has-error').removeClass('has-feedback');
+     }
+   });
+   $('#password').keyup(function(){
+     var password = $(this).val();
+     if(password == "") {
+       $(this).closest('div').find('label').removeClass('hidden').html('This field is required.');
+       $(this).closest('.form-group').addClass('has-error').addClass('has-feedback');
+     }
+     else {
+       $(this).closest('div').find('label').addClass('hidden');
+       $(this).closest('.form-group').removeClass('has-error').removeClass('has-feedback');
+     }
+   });
+ });
+</script>
+
 </body>
 </html>
