--- a/job/templates/job/estimate.html
+++ b/job/templates/job/estimate.html
@@ -19,6 +19,7 @@
 		<input id="result" type="hidden" value="{{message}}" />
 		<div class="result" id="{{message}}">{{message}}</div>
 </form>
+
 <script type="text/javascript">
 		$.ajaxSetup({
     	beforeSend: function(xhr, settings) {
@@ -27,34 +28,105 @@
     	}
   	});
 
-		$("#estimate_create").on("click", function(e) {
-			e.preventDefault();
-			$.ajax({
-				url: '/'+ service_id +'/estimate/',
-				type:'POST',
-				data: {
-					'customer_id' : $("#customer_id").val(),
-					'service_id' : $("#service_id").val(),
-					'trasportation_charge' : $("#trasportation_charge").val(),
-					'visit_charge' : $("#visit_charge").val(),
-					'extra_cost' : $("#extra_cost").val(),
-					'csrfmiddlewaretoken' : getCookie('csrftoken')
-				},
-				success: function(data) {
-					currServiceObject = $("#"+$("#service_id").val());
-					$("#estimation_form").replaceWith(data);
-					var a=$("#result").val();
-					if(a!="Form is not submitted due to Error.")
-					{
-						if(currServiceObject.find('i').length == 1)
-						{
-							currServiceObject.append('<i class="fa fa-check-circle" aria-hidden="true" style="color:green;font-size: 15px; cursor:pointer;"></i>');
-						}
-						toastr.success(a, 'Success', {timeOut: 5000});
-						$('#view_result_data').modal('toggle');
+		$(document).ready(function(){
+			$("#trasportation_charge").blur(function(){
+          var charge = $(this).val();
+          if(charge == "") {
+            $(this).closest('div').find('label').removeClass('hidden');
+						$(this).attr("placeholder", "This Field is Required");
+            $(this).closest('.form-group').addClass('has-error').addClass('has-feedback');
+          }
+					else {
+						$(this).val(parseInt(charge).toFixed(2));
 					}
-				}
-			})
+      });
+			$("#visit_charge").blur(function(){
+          var charge = $(this).val();
+          if(charge == "") {
+            $(this).closest('div').find('label').removeClass('hidden');
+						$(this).attr("placeholder", "This Field is Required");
+            $(this).closest('.form-group').addClass('has-error').addClass('has-feedback');
+          }
+					else {
+						$(this).val(parseInt(charge).toFixed(2));
+					}
+      });
+			$("#extra_cost").blur(function(){
+          var charge = $(this).val();
+          if(charge == "") {
+            $(this).val('0.0');
+          }
+      });
+			$('#trasportation_charge').keyup(function(){
+        var charge = $(this).val();
+        if(charge == "") {
+					$(this).closest('div').find('label').removeClass('hidden');
+					$(this).attr("placeholder", "This Field is Required");
+				  $(this).closest('.form-group').addClass('has-error').addClass('has-feedback');
+        }
+        else {
+
+          $(this).closest('.form-group').removeClass('has-error').removeClass('has-feedback');
+        }
+      });
+			$('#visit_charge').keyup(function(){
+        var charge = $(this).val();
+        if(charge == "") {
+					$(this).closest('div').find('label').removeClass('hidden');
+					$(this).attr("placeholder", "This Field is Required");
+				  $(this).closest('.form-group').addClass('has-error').addClass('has-feedback');
+        }
+        else {
+          $(this).closest('.form-group').removeClass('has-error').removeClass('has-feedback');
+        }
+      });
+    });
+
+
+		$("#estimate_create").on("click", function(e) {
+			var trasportation_charge = $("#trasportation_charge").val();
+			var visit_charge = $("#visit_charge").val();
+			if(trasportation_charge == "") {
+				$("#trasportation_charge").closest('div').find('label').removeClass('hidden');
+				$("#trasportation_charge").attr("placeholder", "This Field is Required");
+				$("#trasportation_charge").closest('.form-group').addClass('has-error').addClass('has-feedback');
+				e.preventDefault();
+			}
+			else if(visit_charge == "") {
+				$("#visit_charge").closest('div').find('label').removeClass('hidden');
+				$("#visit_charge").attr("placeholder", "This Field is Required");
+				$("#visit_charge").closest('.form-group').addClass('has-error').addClass('has-feedback');
+				e.preventDefault();
+			}
+			else {
+				e.preventDefault();
+				$.ajax({
+					url: '/'+ service_id +'/estimate/',
+					type:'POST',
+					data: {
+						'customer_id' : $("#customer_id").val(),
+						'service_id' : $("#service_id").val(),
+						'trasportation_charge' : $("#trasportation_charge").val(),
+						'visit_charge' : $("#visit_charge").val(),
+						'extra_cost' : $("#extra_cost").val(),
+						'csrfmiddlewaretoken' : getCookie('csrftoken')
+					},
+					success: function(data) {
+						currServiceObject = $("#"+$("#service_id").val());
+						$("#estimation_form").replaceWith(data);
+						var a=$("#result").val();
+						if(a!="Form is not submitted due to Error.")
+						{
+							if(currServiceObject.find('i').length == 1)
+							{
+								currServiceObject.append('<i class="fa fa-check-circle" aria-hidden="true" style="color:green;font-size: 15px; cursor:pointer;"></i>');
+							}
+							toastr.success(a, 'Success', {timeOut: 5000});
+							$('#view_result_data').modal('toggle');
+						}
+					}
+				})
+			}
 		});
 
 	function getCookie(name) {
