--- a/job/templates/job/feedback.html
+++ b/job/templates/job/feedback.html
@@ -1,23 +1,132 @@
 {% extends 'job/base.html' %}
 {% block content %}
-{% if 'Customer' in request.session.dash %}
-  <div class="container" style="margin-top:10px;">
-    <div class="row">
-      <div class="col-md-9 col-centered">
-        <form method="post" enctype="multipart/form-data" action="">
-          {% csrf_token %}
-          <div class="input-group">
-              <textarea style="resize: none;" class="form-control custom-control" rows="6"  cols="90" name="feedback_description" placeholder="Enter Feedback" required=""></textarea>
-              <input type="hidden" name="customer_id" value="{{ cust }}"/>
+	{% load static %}
+	<!-- datatable -->
+	<link href="{% static 'job/js/datatables/jquery.dataTables.min.css' %}" rel="stylesheet" type="text/css" />
+	<link href="{% static 'job/js/datatables/buttons.bootstrap.min.css' %}" rel="stylesheet" type="text/css" />
+	<link href="{% static 'job/js/datatables/fixedHeader.bootstrap.min.css' %}" rel="stylesheet" type="text/css" />
+	<link href="{% static 'job/js/datatables/scroller.bootstrap.min.css' %}" rel="stylesheet" type="text/css" />
+	<script src="{% static 'job/js/jquery.min.js' %}"></script>
+	<link href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" rel="stylesheet" />
+
+	<div class="wrapper border-bottom white-bg page-heading">
+		<div class="col-xs-12">
+			<ol class="breadcrumb" style="padding:20px 15px;">
+				<li>Dashboard</li>
+				<li><strong>Feedback</strong></li>
+			</ol>
+		</div>
+		<div class="col-xs-12">
+			{% if not 'Admin' in request.session.dash %}
+				<button type="button" class="btn btn-primary pull-right" data-toggle="modal" id="feedback" data-target="#view_result_data">Give Feedback</button>
+			{% endif %}
+			<div class="x_panel">
+				{% if messages %}
+				<ul class="messages">
+					{% for message in messages %}
+						<li{% if message.tags %} style="list-style-type:none;" class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+					{% endfor %}
+				</ul>
+				{% endif %}
+				<div class="x_content">
+					<table id="datatable-responsive" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
+						<thead>
+							<tr>
+									<th>Customer Name</th>
+									<th>Feedback Description</th>
+							</tr>
+						</thead>
+						<tbody>
+							{% for feedback in all_feedback %}
+							<tr>
+								<td scope="row">{{ feedback.customer_id.first_name }} {{ feedback.customer_id.last_name }}</td>
+					      <td>{{ feedback.feedback_description }}</td>
+							</tr>
+							{% endfor %}
+						</tbody>
+					</table>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="modal fade" id="view_result_data" role="dialog">
+    <div class="modal-dialog">
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">Feedback</h4>
+        </div>
+        <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0; padding-right: 0;">
+          <div class="x_panel">
+            <div id="content_result">
+            </div>
           </div>
-          <div>
-            <button type="submit" class="btn btn-primary">submit</button>
-          </div>
-        </form>
+        </div>
       </div>
     </div>
   </div>
-  {% else %}
-      <h2>You have no access to this page</h2>
-  {% endif %}
+
+	<script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
+	<!-- bootstrap progress js -->
+	<script src="{% static 'job/js/progressbar/bootstrap-progressbar.min.js' %}"></script>
+	<script src="{% static 'job/js/nicescroll/jquery.nicescroll.min.js' %}"></script>
+	<!-- icheck -->
+	<script src="{% static 'job/js/icheck/icheck.min.js' %}"></script>
+
+	<!-- Datatables-->
+  <script src="{% static 'job/js/datatables/jquery.dataTables.min.js' %}"></script>
+  <script src="{% static 'job/js/datatables/dataTables.bootstrap.js' %}"></script>
+  <script src="{% static 'job/js/datatables/dataTables.buttons.min.js' %}"></script>
+  <script src="{% static 'job/js/datatables/buttons.bootstrap.min.js' %}"></script>
+  <script src="{% static 'job/js/datatables/jszip.min.js' %}"></script>
+  <script src="{% static 'job/js/datatables/pdfmake.min.js' %}"></script>
+  <script src="{% static 'job/js/datatables/vfs_fonts.js' %}"></script>
+  <script src="{% static 'job/js/datatables/buttons.html5.min.js' %}"></script>
+  <script src="{% static 'job/js/datatables/buttons.print.min.js' %}"></script>
+  <script src="{% static 'job/js/datatables/dataTables.fixedHeader.min.js' %}"></script>
+  <script src="{% static 'job/js/datatables/dataTables.keyTable.min.js' %}"></script>
+  <script src="{% static 'job/js/datatables/dataTables.scroller.min.js' %}"></script>
+  <script src="{% static 'job/js/pace/pace.min.js' %}"></script>
+
+	<script type="text/javascript">
+
+  	window.onload = function () {
+  		$( ".x_panel .row .col-sm-12" ).removeClass( "col-sm-12" ).addClass( "table-responsive" );
+  	}
+
+    $("#feedback").on("click", function() {
+      $.ajax({
+        url: '/createfeedback/',
+        type:'GET',
+        data: '',
+     	  success: function(data) {
+          $("#content_result").html(data);
+     	  }
+      })
+    });
+
+		window.setInterval(function(){
+				$('.dataTables_empty').closest('tr').find('td').attr("colspan", "10");
+		}, 500);
+
+		$(document).ready(function() {
+			$('#datatable').dataTable();
+			$('#datatable-keytable').DataTable({
+				keys: true
+			});
+			$('#datatable-responsive').DataTable();
+			$('#datatable-scroller').DataTable({
+				ajax: "js/datatables/json/scroller-demo.json",
+				deferRender: true,
+				scrollY: 380,
+				scrollCollapse: true,
+				scroller: true
+			});
+			var table = $('#datatable-fixed-header').DataTable({
+				fixedHeader: true
+			});
+		});
+	</script>
 {% endblock %}
