--- a/job/templates/job/login.html
+++ b/job/templates/job/login.html
@@ -103,10 +103,12 @@
       <form method="post" action="">
         {% csrf_token %}
         <div class="form-group">
-          <input type="email" class="form-control" name="email" placeholder="Email address" required>
+          <label id="foo-error" class="error hidden" for="email"></label>
+          <input type="email" class="form-control" name="email" id="email" placeholder="Email address" required>
         </div>
         <div class="form-group">
-          <input type="password" class="form-control" name="password" placeholder="Password" required>
+          <label id="foo-error" class="error hidden" for="password"></label>
+          <input type="password" class="form-control" name="password" id="password" placeholder="Password" required>
         </div>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
       </form>
