--- a/job/templates/job/response_query.html
+++ b/job/templates/job/response_query.html
@@ -5,20 +5,44 @@
     <div><input type="hidden" id="customer_id" name="customer_id" value="{{all_customers.id}}" /></div>
     <div><input type="hidden" id="status" name="status" value="completed" /></div>
 
-	 <div class="form-group">
-		 <label class="control-label col-sm-4" for="visit_charge">Enter Response : </label>
-		 	{% if queries.query_response %}
+
+	 	{% if queries.query_response %}
+			<div class="form-group">
 				<textarea disabled style="resize: none;" class="form-control custom-control" rows="3"  cols="90" id="query_response" name="query_response" placeholder="Enter Response">{{queries.query_response}}</textarea>
-		 	{% else %}
-		 		<textarea style="resize: none;" class="form-control custom-control" rows="3"  cols="90" id="query_response" name="query_response" placeholder="Enter Response"></textarea>
-	 </div>
+			</div>
+	 	{% else %}
+			<div class="form-group">
+				<label id="foo-error" class="error hidden" for="service_request">This field is required.</label>
+	 			<textarea style="resize: none;" class="form-control custom-control" rows="3"  cols="90" id="query_response" name="query_response" placeholder="Enter Response"></textarea>
+ 	 		</div>
 	 <button type="submit" id="query_submit" class="btn btn-primary" style="margin-left: 10px">submit</button>
 	 		{% endif %}
 			<input id="result" type="hidden" value="{{message}}" />
 			<div class="result" id="{{message}}">{{message}}</div>
 </form>
 <script type="text/javascript">
-		$('#result').hide();
+
+		$(document).ready(function(){
+			$("#query_response").blur(function(){
+					var description = $(this).val();
+					if(description == "") {
+						$(this).closest('div').find('label').removeClass('hidden');
+						$(this).closest('.form-group').addClass('has-error').addClass('has-feedback');
+					}
+			});
+			$('#query_response').keyup(function(){
+        var description = $(this).val();
+        if(description == "") {
+          $(this).closest('div').find('label').removeClass('hidden');
+          $(this).closest('.form-group').addClass('has-error').addClass('has-feedback');
+        }
+        else {
+          $(this).closest('div').find('label').addClass('hidden');
+          $(this).closest('.form-group').removeClass('has-error').removeClass('has-feedback');
+        }
+      });
+    });
+
 		$.ajaxSetup({
 			beforeSend: function(xhr, settings) {
 				getCookie(settings);
@@ -27,31 +51,42 @@
 		});
 
 		$("#query_submit").on("click", function(e) {
-			e.preventDefault();
-			$.ajax({
-				url: '/'+ query_id +'/responsequery/',
-				type:'POST',
-				data: {
-					'id': $("#id").val(),
-					'customer_id' : $("#customer_id").val(),
-					'status' : $("#status").val(),
-					'query_response' : $("#query_response").val(),
-					'csrfmiddlewaretoken' : getCookie('csrftoken')
-				},
-				success: function(data) {
-					currServiceObject = $("#"+$("#id").val());
+			var description = $("#query_response").val();
 
-					$("#query_form").replaceWith(data);
-					var a=$("#result").val();
-					if(a!="Internal Error.")
-					{
-						$('#view_result_data').modal('toggle');
-						currServiceObject.find("img").remove();
-						currServiceObject.append('<i class="fa fa-check-circle" style="color:green; font-size:20px;" aria-hidden="true"></i>')
-						toastr.success(a, 'Success', {timeOut: 5000});
-					}
-				},
-			})
+			if(description == "") {
+				$(this).closest('div').find('label').removeClass('hidden');
+				$(this).closest('.form-group').addClass('has-error').addClass('has-feedback');
+				e.preventDefault();
+			}
+			else{
+				e.preventDefault();
+				$.ajax({
+					url: '/'+ query_id +'/responsequery/',
+					type:'POST',
+					data: {
+						'id': $("#id").val(),
+						'customer_id' : $("#customer_id").val(),
+						'status' : $("#status").val(),
+						'query_response' : $("#query_response").val(),
+						'csrfmiddlewaretoken' : getCookie('csrftoken')
+					},
+					success: function(data) {
+						currServiceObject = $("#"+$("#id").val());
+
+						$("#query_form").replaceWith(data);
+						var a=$("#result").val();
+						if(a!="Internal Error.")
+						{
+							$('#view_result_data').modal('toggle');
+							if(currServiceObject.length == 1) {
+								currServiceObject.find("img").remove();
+								currServiceObject.append('<i class="fa fa-check-circle" style="color:green; font-size:20px;" aria-hidden="true"></i>')
+							}
+							toastr.success(a, 'Success', {timeOut: 5000});
+						}
+					},
+				})
+			}
 		});
 
 	function getCookie(name) {
