--- a/job/templates/job/base.html
+++ b/job/templates/job/base.html
@@ -85,7 +85,7 @@
                 <li><a href="{% url 'job:customer' %}"><i class="fa fa-edit"></i> Customer </a></li>
                 <li><a href="{% url 'job:worker' %}"><i class="fa fa-edit"></i> Worker </a></li>
                 <li><a href="{% url 'job:wishes_worker' %}"><i class="fa fa-edit"></i> Worker Requests</a></li>
-                <li><a href="{% url 'job:feedback' %}"><i  aria-hidden="true">Feedback </a></li>
+                <li><a href="{% url 'job:feedback' %}"><i class="fa fa-commenting-o" aria-hidden="true"></i>Feedback </a></li>
                 {% endif %}
               </ul>
             </div>
