--- a/job/templates/job/categories.html
+++ b/job/templates/job/categories.html
@@ -17,75 +17,78 @@
       <li><strong>Categories</strong></li>
     </ol>
   </div>
-  <div class="col-xs-12">
-    <button type="button" class="btn btn-primary pull-right" data-toggle="modal" data-target="#catgories">Number of categories : {{ all_categories.count }}</button>
-    <button type="button" class="btn btn-primary pull-right" data-toggle="modal" id="new_category" data-target="#view_result_data">Add new</button>
-    <div class="clearfix"></div>
-    <div class="modal fade" id="catgories" role="dialog">
-      <div class="modal-dialog">
-        <!-- Modal content-->
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal">&times;</button>
-            <h4 class="modal-title">Categories</h4>
-          </div>
-          <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0; padding-right: 0;">
-            <div class="x_panel">
-              {% if messages %}
-                <ul class="messages">
-                    {% for message in messages %}
-                      <li{% if message.tags %} style="list-style-type:none;" class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-                    {% endfor %}
-                </ul>
-              {% endif %}
-              <div class="x_content">
-                <table id="example4" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
-                  <thead>
-                    <tr>
-                      <th>Category Name</th>
-                      <th>No of Employees</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    {% for cat in all_categories %}
+
+  <div class="container" style="width:98%;">
+    <div class="row">
+      <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
+        <button type="button" class="btn btn-primary btn-block" data-toggle="modal" data-target="#catgories">Number of categories : {{ all_categories.count }}</button>
+      </div>
+      <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+        <button type="button" class="btn btn-primary btn-block" data-toggle="modal" id="new_category" data-target="#view_result_data">Add new</button>
+      </div>
+      <div class="modal fade" id="catgories" role="dialog">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+              <h4 class="modal-title">Categories</h4>
+            </div>
+            <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0; padding-right: 0;">
+              <div class="x_panel">
+                <div class="x_content">
+                  <table id="example4" class="table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
+                    <thead>
                       <tr>
-                        <td>{{ cat.category_name  }}</td>
-                        <td>{{ cat.worker_set.all.count }}</td>
+                        <th>Category</th>
+                        <th>Employees</th>
                       </tr>
-                    {% endfor %}
-                  </tbody>
-                </table>
+                    </thead>
+                    <tbody>
+                      {% for cat in all_categories %}
+                        <tr>
+                          <td>{{ cat.category_name  }}</td>
+                          <td>{{ cat.worker_set.all.count }}</td>
+                        </tr>
+                      {% endfor %}
+                    </tbody>
+                  </table>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div>
-          {% for cat in all_categories %}
-                   <button type="button" class="btn btn-primary pull-left category" data-toggle="modal" id="{{cat.id}}" data-target="#view_result_data">
-                     <h2>{{cat.category_name}}</h2>
-                     <h2>Number of Employees</h2>
-                     <h2>{{cat.worker_set.all.count}}</h2>
-                   </button>
-          {% endfor %}
-    </div>
-    <div class="modal fade" id="view_result_data" role="dialog">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal">&times;</button>
-              <h4 class="modal-title">New Category</h4>
+    <div class="row top_tiles">
+      {% for cat in all_categories %}
+        <div class="animated flipInY col-lg-3 col-md-3 col-sm-6 col-xs-12 category" style="cursor:pointer; margin-top:15px;" data-toggle="modal" id="{{cat.id}}" data-target="#view_result_data">
+          <div class="tile-stats">
+            <div class="icon"><i class="fa fa-caret-square-o-right"></i>
+            </div>
+            <div class="count">{{cat.worker_set.all.count}}</div>
+            <h4>{{cat.category_name}}</h4>
           </div>
-        <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0; padding-right: 0;">
-          <div class="x_panel">
-              <div id="content_result">
-              </div>
+        </div>
+      {% endfor %}
+    </div>
+
+<div class="modal fade" id="view_result_data" role="dialog">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Category</h4>
+      </div>
+      <div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0; padding-right: 0;">
+        <div class="x_panel">
+          <div id="content_result">
           </div>
         </div>
       </div>
     </div>
+  </div>
 </div>
+
 {% else %}
   <h2>You have no access to this page</h2>
 {% endif %}
@@ -100,8 +103,6 @@
       });
   });
 </script>
-
-
 <script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
 <!-- bootstrap progress js -->
 <script  type="text/javascript" src="{% static 'job/js/progressbar/bootstrap-progressbar.min.js' %}"></script>
@@ -134,7 +135,6 @@
      	  }
       })
     });
-    
 
     $(".category").on("click", function() {
       cat_id=this.id;
@@ -148,24 +148,7 @@
       })
     });
 
-
-    $('#example1').DataTable({
-      "paging":   false,
-      "info":     false
-    });
-    $('#example2').DataTable({
-      "paging":   false,
-      "info":     false
-    });
-    $('#example3').DataTable({
-      "paging":   false,
-      "info":     false
-    });
     $('#example4').DataTable({
-      "paging":   false,
-      "info":     false
-    });
-    $('#example5').DataTable({
       "paging":   false,
       "info":     false
     });
