--- a/job/templates/job/change_password.html
+++ b/job/templates/job/change_password.html
@@ -1,7 +1,7 @@
 {% extends 'job/base.html' %}
 {% block content %}
 <link href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" rel="stylesheet" />
-<div class="container" style="width:50%;">
+<div class="container" style="width:50%;margin-top: 40px;">
     <div class="card card-container">
       <h3 style="text-align:center;">Password Reset</h3>
       {% if messages %}
