--- a/job/templates/job/notifications.html
+++ b/job/templates/job/notifications.html
@@ -52,7 +52,7 @@
 							<td scope="row">{{ notify.message }}</td>
 							<!-- <td><a class="view_data" id="{{ job.id }}" data-toggle="modal" data-target="#view_result_data"><i class="fa fa-eye btn" style="font-size:20px;color:#6BD152;padding-left: :5%" area-hidden="true"></i></a></td> -->
 							<!-- <td style="width: 40px;text-align: center;"><a href="{% url 'job:delete_noti' notify.id %}"><i class="fa fa-trash-o" aria-hidden="true" style="color: red;font-size: 18px;"></i></a></td> -->
-							<td style="width: 40px;text-align: center;"><a class="delete_noti" id="{{ notify.id }}"><i class="fa fa-trash-o" aria-hidden="true" style="color: red;font-size: 18px;"></i></a></td>
+							<td style="width: 40px;text-align: center;cursor: pointer;"><a class="delete_noti" id="{{ notify.id }}"><i class="fa fa-trash-o" aria-hidden="true" style="color: red;font-size: 18px;"></i></a></td>
 						</tr>
 						{% endfor %}
 					</tbody>
