fixed bugs in notifications

--- a/job/templates/job/customer_create_service.html
+++ b/job/templates/job/customer_create_service.html
@@ -11,6 +11,7 @@
             </select>
           </div>
   <div class="input-group">
+  <label id="foo-error" class="error hidden" for="query_description">This field is required.</label>
     <textarea style="resize: none;" class="form-control" rows="5" cols="70" id="service_request" name="service_request" placeholder="Describe your problem" required="">{{last_service.service_request}}</textarea>
   </div>
   <div class="input-group">
