--- a/job/templates/job/notifications.html
+++ b/job/templates/job/notifications.html
@@ -129,7 +129,7 @@
         //alert(allVals.length); return false;  
         if(allVals.length <=0)  
         {  
-            alert("Please select row.");  
+            //alert("Please select row.");  
         }  
         else {  
             //$("#loading").show(); 
