--- a/job/templates/job/invoice.html
+++ b/job/templates/job/invoice.html
@@ -4,7 +4,7 @@
     <div id="printblock">
       <div class="row pad-top-botm ">
         <div class="col-lg-6 col-md-6 col-sm-6 ">
-          <img src="{% static 'assets/img/logo.jpg' %}" style="padding-bottom:20px;" />
+           <a class="site_title" style="border: 0px ;padding: 5px 6px; "><i style="color: #37775D;border: 1px solid #37775D" class="fa fa-paw"></i> <span style="color: #37775D;">TRABAZO</span></a>
         </div>
         <div class="col-lg-6 col-md-6 col-sm-6">
           <strong>Trabazo</strong>
@@ -192,7 +192,7 @@
             {% else %}
               <script
                 src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-                data-key="pk_test_pFphudOa34Smj5Zh5naZ55fj"
+                data-key="pk_test_gj0u77qkfstYnLJIbMavCgv8"
                 data-amount="{{ amt_in_usd }}"
                 data-name="Trabazo"
                 data-description="Payment"
