--- a/job/templates/job/profile.html
+++ b/job/templates/job/profile.html
@@ -17,7 +17,7 @@
 								<img class="card-bkimg" alt="" src="http://lorempixel.com/100/100/people/9/">
 						</div>
 						<div class="useravatar">
-								<img alt="" src="{% static %}{{ customer.profile_pic.url }}">
+								<img alt="" src="{% static 'customer.profile_pic.url' %}">
 						</div>
 						<div class="card-info"> <span class="card-title">{{ customer.first_name }} {{ customer.last_name }}</span>
 
