--- a/job/templates/job/profile.html
+++ b/job/templates/job/profile.html
@@ -18,7 +18,7 @@
 								<img class="card-bkimg" alt="" src="http://lorempixel.com/100/100/people/9/">
 						</div>
 						<div class="useravatar">
-								<img class="view_profile" alt="" id="{{ customer.id }}" src="{{ customer.profile_pic.url }}" data-toggle="modal" data-target="#view_result_data">
+								<img style="cursor: pointer;" class="view_profile" alt="" id="{{ customer.id }}" src="{{ customer.profile_pic.url }}" data-toggle="modal" data-target="#view_result_data">
 						</div>
 						<div class="card-info"> <span class="card-title">{{ customer.first_name }} {{ customer.last_name }}</span>
 
@@ -154,7 +154,7 @@
       			<div class="modal-content">
 					<div class="modal-header">
 							<button type="button" class="close" data-dismiss="modal">&times;</button>
-							<h4 class="modal-title"></h4>
+							<h4 class="modal-title">Update Profile</h4>
 					</div>
     			<div class="col-md-12 col-sm-12 col-xs-12" style="padding-left: 0; padding-right: 0;">
           		<div class="x_panel">
