--- a/job/templates/job/update_profile.html
+++ b/job/templates/job/update_profile.html
@@ -14,7 +14,8 @@
        </div>
       <div class="form-group">
              <label style="float:left; line-height:34px; font-size:14px;">Profile : &nbsp;</label>
-             <input type="file" class="form-control input-md" name="profile_pic" id="profile_pic" required />
+             <label style="float:left; line-height:34px; font-size:10px;color: #3F658B">Currently is :{{cust.profile_pic}}</label>
+             <input type="file" class="form-control input-md" name="profile_pic" id="profile_pic"}/>
       </div>
   <div class="input-group">
   <label id="foo-error" class="error hidden" for="first_name">This field is required.</label>
