--- a/job/templates/job/customer_all.html
+++ b/job/templates/job/customer_all.html
@@ -37,7 +37,7 @@
 							<th>Email</th>
 							<th>Mobile Number</th>
 							<th>Registration Date</th>
-							<th>View</th>
+							<th style="width: 50px;">View</th>
 						</tr>
 					</thead>
 					<tbody>
